@@ -63,6 +63,11 @@ public:
 protected:
     virtual wxSize DoGetBestSize() const;
 
+#ifdef __WXGTK20__
+    void DoSet3StateValue(wxCheckBoxState state);
+    wxCheckBoxState DoGet3StateValue() const;
+#endif
+
 private:
     DECLARE_DYNAMIC_CLASS(wxCheckBox)
 };
